--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<head>Neg-Bin Quiz</head>
+		<title>Neg-Bin Quiz</title>
 		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
